# aibook

./: .gitignore  Cargo.toml  README.md
book2test/: processing_state.json
prompts/: detailed_summary.md  summary_plan.md
src/: ai_provider.rs  cli.rs  ebook.rs  epub_handler.rs  integrations.rs  llm.rs  main.rs  output.rs  summarizer.rs
