[package]
name = "aibook-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
eyre = "0.6"
reqwest = { version = "0.12.8", features = ["json"] }
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
clap = { version = "4.0.32", features = ["derive"] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
epub = "2.1.2"
epub-builder = "0.7.4"
sanitize-filename = "0.5"
log = "0.4"
lazy_static = "1.4"
serde_json = "1.0"
indicatif = "0.17.0"
