[package]
name = "aibook-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.8", features = ["json", "cookies"] }
tokio = { version = "1.25", features = ["rt-multi-thread", "macros" ] }
dotenv = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
epub = "2.1.2"
html2text = "0.13.2"
clap = { version = "4.3.0", features = ["derive"] }
indicatif = "0.17.6"
futures = "0.3.28"
tiktoken-rs = "0.6.0"
log = "0.4.20"
env_logger = "0.11.5"
regex = "1.7.3"
anyhow = "1.0.70"
sanitize-filename = "0.5.0"
chrono = "0.4.38"
